tests/miniJava/neg/005333_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { return public int [] java ( ) { return 0 ; } }
